# 3D-reconstruction-PCL

./: .gitignore  Project1.sln  README.md
Project1/: CMakeLists.txt  Project1.vcxproj  Project1.vcxproj.filters  io_obj.cpp  io_obj.h  kitti_io_obj.cpp  kitti_io_obj.h  lvx_io_obj.cpp  lvx_io_obj.h  lvx_reader.cpp  lvx_reader.h  main.cpp  pc_operator.cpp  pc_operator.h  utils.cpp  utils.h
Project1/calib_par/: bundle.rd.out  camera_lidar_calibration_1.yaml  camera_lidar_calibration_2.yaml  test.py  test_ext_int.m
Project1/include/: kitti_io_obj.h  lvx_io_obj.h  pc_operator.h  texturing.h
Project1/intrinsic_extrinsic_parameters/: test_ext_int.m
Project1/lvx_parser/: _frame.py  deal_imu_data.py  new_parse_file.py  pylvx.py
Project1/src/: kitti_io_obj.cpp  lvx_io_obj.cpp  main.cpp  pc_operator.cpp  texturing.cpp  utils.cpp
